--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -30,4 +30,6 @@ jobs:
       - name: Update posts
         uses: gautamkrishnar/blog-post-workflow@master
         with:
+          comment_tag_name: "STACKOVERFLOW"
           feed_list: "https://rss.csdn.net/yumuing/rss/map?spm=1001.2014.3001.5494"
+          template: "<tr><td>$title</td><td>$url</td></tr>"
