--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -32,5 +32,5 @@ jobs:
         with:
           comment_tag_name: "STACKOVERFLOW"
           feed_list: "https://rss.csdn.net/yumuing/rss/map?spm=1001.2014.3001.5494"
-          template: "<tr><td>$title</td><td><a href="$url">Click here to read</a></td></tr>"
+          template: "<tr><td>$title</td><td><$url</td></tr>"
           title_max_length: "25"
